--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
+    "react-uuid": "^2.0.0",
     "sass": "^1.62.1",
     "sort-by": "^1.2.0"
   },
